--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,18 +21,31 @@ GitPython = "3.1.18"
 SQLAlchemy = "^1.4.31"
 click = "8.0.4"
 tabulate = "0.8.9"
+Sphinx = {version = "4.5.0", optional = true}
+sphinx-markdown-builder = {version = "0.5.5", optional = true}
 
 [tool.poetry.dev-dependencies]
 pytest = "6.2.5"
 black = "21.12b0"
 poetry-githooks = "2.0.0"
 isort = "4.3.21"
+taskipy = "1.10.1"
 
 [tool.poetry.extras]
+docs = ["Sphinx", "sphinx-markdown-builder"]
 visualization = ["matplotlib", "pydot"]
 
 [tool.poetry.scripts]
 tdp = "tdp.cli.__main__:tdp"
+
+[tool.taskipy.variables]
+docs_path = "docs"
+
+[tool.taskipy.tasks]
+docs-generate = {cmd = "sphinx-apidoc --output-dir {docs_path} --module-first --doc-project TDP --doc-author TOSIT --full --force tdp '*test*'", use_vars = true}
+docs-clean = {cmd = "make -C {docs_path} clean", use_vars = true}
+docs-html = {cmd = "make -C {docs_path} html", use_vars = true}
+docs-markdown = {cmd = "make -C {docs_path} markdown", use_vars = true}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
